--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="js/data.js"></script>
     <script src="js/Enemy.js"></script>
     <script src="js/engine-utilities.js"></script>
+    <script src="js/Text.js"></script>
+    <script src="js/restart.js"></script>
+    <script src="js/score.js"></script>
     <script src="js/Engine.js"></script>
     <script src="js/Player.js"></script>
     <script src="js/main.js"></script>
